getting foundation unit/integration test logic together