@@ -20,12 +20,16 @@
         <!-- flag to skip overlay source war extract -->
         <skip.overlay.extract>false</skip.overlay.extract>
                 
-        <!-- maven properties -->
+        <!-- maven version check properties -->
         <required.maven.version>3.0</required.maven.version>
         <enforcer.phase>validate</enforcer.phase>
         
         <!-- unit/integration tests flag -->
-        <skip.tests>true</skip.tests>
+        <skip.tests>false</skip.tests>
+        
+        <!-- directory where test runtime config properties can be found -->
+        <test.properties.dir>/home/rbtucker/work/unit-test-config</test.properties.dir>
+        <source.war.classes.extract.dir>target/war/work/org.kuali.kfs/kfs/WEB-INF/classes</source.war.classes.extract.dir>
     </properties>
     <dependencies>
         <dependency>
@@ -225,14 +229,12 @@
             <type>war</type>
         </dependency>        
         <!-- test dependencies -->
-        <!--
         <dependency>
-            <groupId>org.kuali</groupId>
-            <artifactId>kfs-foundation-tests</artifactId>
+            <groupId>org.kuali.kfs</groupId>
+            <artifactId>foundation-tests</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
-        </dependency>
-        -->
+        </dependency>        
         <dependency>
             <groupId>com.oracle</groupId>
             <artifactId>ojdbc6</artifactId>
@@ -313,12 +315,28 @@
         </dependency>
     </dependencies>
     <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>kfs-default-config.properties</include>
+                </includes>
+            </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>kfs-default-config.properties</exclude>
+                </excludes>
+            </testResource>
+        </testResources>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
                 <excludes>
                     <!-- kfs puts these resource under WEB-INF, by default they
-                        would end up in WEB-INF/classes so we will exclude them here -->                    
+                    would end up in WEB-INF/classes so we will exclude them here -->                    
                     <exclude>configuration-examples/**</exclude>
                     <exclude>configuration-templates/**</exclude>
                     <exclude>docker/**</exclude>
@@ -360,7 +378,7 @@
                         <configuration>
                             <webappDirectory>target/docker/kfs-build/kfs</webappDirectory>
                             <!-- exclude some jars we do not need - the rice jars 
-                                are overridden with ua-specific versions -->
+                            are overridden with ua-specific versions -->
                             <dependentWarExcludes>**/rice-impl-2.1.9.jar</dependentWarExcludes>
                             <overlays>
                                 <overlay>
@@ -370,7 +388,7 @@
                                 </overlay>
                             </overlays>
                             <!-- kfs puts these resource under WEB-INF, by default they
-                                end up in WEB-INF/classes so we handle this here -->
+                            end up in WEB-INF/classes so we handle this here -->
                             <webResources>
                                 <resource>
                                     <directory>src/main/resources</directory>
@@ -412,8 +430,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>       
-            <!--
+            </plugin>     
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -426,15 +443,15 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=384m</argLine>
+                            <systemPropertyVariables>
+                                <additional.kfs.config.locations>${test.properties.dir}/uaf-security-config.properties,${test.properties.dir}/uaf-rice-config.properties,${test.properties.dir}/uaf-kfs-config.properties</additional.kfs.config.locations>
+                            </systemPropertyVariables>
+                            <argLine>-Xms1024m -Xmx1024m</argLine>
                             <skipTests>${skip.tests}</skipTests>
                             <classesDirectory>target/docker/kfs-build/kfs/WEB-INF/classes</classesDirectory>
                             <additionalClasspathElements>
                                 <additionalClasspathElement>${project.basedir}/src/test/resources</additionalClasspathElement>
                             </additionalClasspathElements>
-                            <classpathDependencyExcludes>
-                                <classpathDependencyExcludes>org.kuali:kfs-foundation-lib</classpathDependencyExcludes>
-                            </classpathDependencyExcludes>
                         </configuration>
                     </execution>
                 </executions>
@@ -455,11 +472,10 @@
                             <skip>${skip.tests}</skip>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.kuali</groupId>
-                                    <artifactId>kfs-foundation-tests</artifactId>
+                                    <groupId>org.kuali.kfs</groupId>
+                                    <artifactId>foundation-tests</artifactId>
                                     <version>${project.version}</version>
-                                    <type>jar</type>
-                                    <overWrite>false</overWrite>
+                                    <overWrite>true</overWrite>
                                     <outputDirectory>target/test-classes</outputDirectory>
                                 </artifactItem>
                             </artifactItems>
@@ -467,8 +483,25 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.3.2</version>
+                <executions>
+                    <execution>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <executable>docker</executable>
+                    <commandlineArgs>-H tcp://127.0.0.1:2375 run -d -p 49160:22 -p 49161:1521 -p 49162:8080 rbtucker/kfs-test-database:base</commandlineArgs>
+                </configuration>
+            </plugin>        
             -->
         </plugins>
-        <finalName>kfs</finalName>
     </build>
 </project>
